--- a/src/components/PostList/PostCard.css
+++ b/src/components/PostList/PostCard.css
@@ -15,3 +15,12 @@
 .hashTag {
   cursor: pointer;
 }
+
+.avatar {
+  border-radius: 50%;
+  margin-bottom: 5%;
+}
+
+.bold {
+  font-weight: bold;
+}
