--- a/src/components/PostList/PostCard.css
+++ b/src/components/PostList/PostCard.css
@@ -24,3 +24,14 @@
 .bold {
   font-weight: bold;
 }
+
+.comment-avatar {
+  border-radius: 50%;
+  width: 15%;
+  margin-right: 5%;
+}
+
+.comment-header {
+  display: flex;
+  align-items: center;
+}
